--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["cyp24 "]
 version = "0.1.0"
 
 [deps]
+HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Npy = "8c784801-6fba-4914-9548-fe67cd7ccd7c"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
