--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,10 @@ authors = ["cyp24 "]
 version = "0.1.0"
 
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Npy = "8c784801-6fba-4914-9548-fe67cd7ccd7c"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
