--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,6 @@ Npy = "8c784801-6fba-4914-9548-fe67cd7ccd7c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
+[source.Npy]
+path = "../Npy.jl"
