--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,5 +1,5 @@
 [deps]
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
+HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
